fix(frontend): Fixed spacing and removed repeated module

--- a/web/src/sass/global.scss
+++ b/web/src/sass/global.scss
@@ -1,43 +1,43 @@
 .base-animation-ease {
-    @apply transition-all duration-300 ease-linear;
+  @apply transition-all duration-300 ease-linear;
 }
 
-html, body {
-    @apply overflow-x-hidden max-w-full;
+html,
+body {
+  @apply overflow-x-hidden max-w-full;
 }
 
 a {
-    @apply text-primary_600 font-semibold underline cursor-pointer base-animation-ease;
-    &:hover {
-        @apply text-primary_400;
-    }
+  @apply text-primary_600 font-semibold underline cursor-pointer base-animation-ease;
+  &:hover {
+    @apply text-primary_400;
+  }
 }
 
 .link-overlay {
-    @apply absolute top-0 left-0 h-full w-full z-10;
+  @apply absolute top-0 left-0 h-full w-full z-10;
 }
 
 .styled-list {
-    @apply list-none;
-    li {
-        @apply flex text-[1rem] items-center;
-        &:not(:last-child) {
-            @apply mb-2;
-        }
-        &:before {
-            content: "■";
-            font-size: 25px;
-            @apply text-primary_600 mr-3;
-            
-        }
+  @apply list-none mb-3;
+  li {
+    @apply flex text-[1rem] items-center;
+    &:not(:last-child) {
+      @apply mb-2;
     }
+    &:before {
+      content: "■";
+      font-size: 25px;
+      @apply text-primary_600 mr-3;
+    }
+  }
 }
 
 #callnowbutton {
-    @apply top-auto bottom-0 #{!important};
+  @apply top-auto bottom-0 #{!important};
 }
 
-.alternating-colors-1 > :nth-of-type(even)   {
-    background-color: #F0F2F8;
-    color: #222;
+.alternating-colors-1 > :nth-of-type(even) {
+  background-color: #f0f2f8;
+  color: #222;
 }
