--- a/web/src/sass/typography.scss
+++ b/web/src/sass/typography.scss
@@ -48,7 +48,7 @@ h6,
 }
 
 p {
-  @apply text-base leading-7 mb-6;
+  @apply text-base leading-7 mb-4;
 }
 
 .text-2xlarge {
